# Haze-Browser

./: .gitignore  Cargo.toml  LICENSE  README.md  clear_icon_cache.bat  rust-toolchain.toml
servo/: build.rs  help.txt
src/: browser.rs  config.rs  lib.rs  main.rs  ui.rs  window.rs
